<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_voltar"
        android:title="@string/menu_voltar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_gestao"
        android:title="@string/menu_gestao"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_relatorio"
        android:title="@string/menu_relatorio"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tipos_mapa"
        android:title="@string/menu_tipos_mapa"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_mapa_normal"
                android:title="@string/menu_mapa_normal" />
            <item
                android:id="@+id/action_mapa_hibrido"
                android:title="@string/menu_mapa_hibrido" />
        </menu>
    </item>
</menu>
